[tool.poetry]
name = "pysatl_tsp"
version = "0.1.0"
description = "Python library for time series processing, serialization and deserialization"
authors = [
    "Rustam Shangareev <rustam.letitbe@gmail.com>",
    "Boris Bugreev <boris_bugreev@mail.ru>"
]
license = "MIT"
readme = "README.md"
include = [
            { path = "pysatl_tsp/*.so", format = ["sdist", "wheel"] }
        ]

[tool.poetry.dependencies]
setuptools = "^80.9.0"
python = "^3.10"
numpy = "^2.0.0"
scipy = "^1.14.0"
matplotlib = "^3.9.1"
scikit-learn = "^1.5.2"
PyQt5 = "^5.15.11"
cffi = ">=1.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
mypy = "^1.10.1"
ruff = "^0.12.2"
pre-commit = "^4.1.0"
pyyaml = "^6.0.1"
matplotlib = "^3.9.1"
ipykernel = "^6.29.5"
hypothesis = "^6.122.1"
scipy-stubs = "^1.15.2"
types-pyyaml = "^6.0.12"
microsoft-python-type-stubs = {git = "https://github.com/microsoft/python-type-stubs.git"}
pytest-cov = "^6.0.0"
websockets = "^15.0.1"
pytest-asyncio = "^1.0.0"
pandas_ta = ">=0.3.14b0"
cffi = ">=1.17.0"
setuptools = "^80.9.0"

[tool.ruff]
line-length = 120
indent-width = 4
respect-gitignore = true
exclude = ["*.ipynb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["A", "E", "F", "I", "PL", "RUF", "SIM", "UP", "W"]
ignore = ["PLR0913"]

[tool.mypy]
files = "pysatl_tsp"
mypy_path = "pysatl_tsp"
strict = true

[[tool.mypy.overrides]]
module = ["pysatl_tsp._c.lib"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core", "cffi", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources._vendor.pyparsing:",
]

[tool.poetry.build]
generate-setup-file = false
script = "build_extension.py"
